# RoControl

./: .gitignore  APPIMAGE_INSTALLATION.md  BACKEND_INTEGRATION_GUIDE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_WITH_GITHUB.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLI_INTEGRATION.md  CLI_KEYWORDS_IMPLEMENTATION.md  CODE_CLEANUP_REPORT.md  CONTRIBUTING.md  DOT_NOTATION_PRESETS.md  ENCODER_HIGHLIGHT_COMMANDS.md  FAN_COMMAND.md  FINAL_FIX.sh  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_INSTALL_STEPS.md  FIX_GLIB.md  FLEXWINDOW_INTEGRATION_GUIDE.md  FLEXWINDOW_PRESETS.md  GAMEPAD_SETUP_INSTRUCTIONS.md  GAP_ANALYSIS.md  GDTF_GUIDE.md  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  INSTALL-STEAMDECK.md  INSTALLATION_CHECKLIST.txt  INSTALLATION_COMPLETE.md  INSTALLATION_GUIDE.md  INSTALLATION_PACKAGE_SUMMARY.md  INSTALL_COMMANDS.txt  INSTALL_NOW.md  INSTALL_README.md  INTEGRATION_STEPS.md  LICENSE  Makefile  NEW_CLI_KEYWORDS.md  NEW_FEATURES_SUMMARY.md  PROGRAMMER_BAR_ENCODER_WHEELS.md  (+63 more)
.claude/: PROJECT_INFO.md  README.md  settings.local.json
.github/workflows/: build-release.yml  build.yml  release.yml
AppDir/: .DirIcon  AppRun  RoControl.desktop
backups/20251114_234754/: App.jsx.backup  main.rs.backup
backups/20251114_235434/: Cargo.toml.backup
docs/: NODE_ARCHITECTURE.md  WORKFLOW_NOTES.md
public/: app.js  index.html  styles.css  switcher.css  switcher.html  switcher.js
src/: App.css  App.jsx  AppTest.jsx  index.css  main.jsx  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_session_coordinator.rs  main.rs  ndi_support.rs  node_api.rs  node_manager.rs  streamdeck_support.rs  time_manager.rs  web_server.rs
src-tauri/web_remote/: index.html
src/components/: AttributeCallButtons.jsx  CLI.jsx  ClaudeSessionCoordinator.jsx  ClocksConfigWindow.jsx  CueExecutorTimeControl.jsx  ElgatoStreamDeckSetup.jsx  FreeformLayout.jsx  GamepadManager.jsx  GridLayout.jsx  GroupHandleEditor.jsx  LayoutConfig.jsx  MasterFader.jsx  NodeManagerSetup.jsx  OnScreenKeyboard.jsx  ProgramTimeControl.jsx  ProgrammerBar.jsx  SteamDeckIntegration.jsx  SteamDeckSetup.jsx  TimeStateMonitor.jsx  ViewButtons.jsx
src/layouts/: presets.js
src/modules/: CLIDispatcher.js  ClockManager.js  EventBus.js  NDIOutput.js  PlaylistManager.js  StreamDeckController.js  SwitcherDeckProfile.js  VideoPlayer.js  VideoSwitcher.js  WebSocketManager.js  index.js
src/native/: media_sender.mm  ndi_discover.mm
src/styles/: AttributeCallButtons.css  CLI.css  ClaudeSessionCoordinator.css  ClocksConfigWindow.css  CueExecutorTimeControl.css  ElgatoStreamDeckSetup.css  FreeformLayout.css  GamepadManager.css  GridLayout.css  GroupHandleEditor.css  LayoutConfig.css  MasterFader.css  NodeManagerSetup.css  OnScreenKeyboard.css  ProgramTimeControl.css  ProgrammerBar.css  SteamDeckIntegration.css  SteamDeckSetup.css  TimeStateMonitor.css  TouchOptimization.css  ViewButtons.css
src/utils/: artnet.js  autoKeyboard.js  cliDispatcher.js  cliParser.js  clocksManager.js  dmxOutputManager.js  featureSetMapping.js  sacn.js  (+6 more)
streamdeck-controller/: README.md  index.js  package.json
(+42 files in other folders)
