[package]
name = "rocontrol"
version = "0.1.0"
description = "RoControl - Professional DMX Lighting Controller for Steam Deck"
authors = ["RoControl Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
artnet_protocol = "0.4"
sacn = "0.10"
zip = "0.6"
xml-rs = "0.8"
thiserror = "1.0"
gilrs = "0.10"  # Gamepad input for Steam Deck controls
if-addrs = "0.10"  # Network interface enumeration
axum = "0.6"  # Web framework for HTTP server
tower = "0.4"  # Service abstractions
tower-http = { version = "0.4", features = ["fs", "cors"] }  # HTTP utilities
tokio-tungstenite = "0.20"  # WebSocket support
futures = "0.3"  # Async utilities
multer = "2.1"  # Multipart form data for file uploads
dirs = "5.0"  # User directories
mdns-sd = "0.10"  # mDNS for NDI discovery
bytes = "1.0"  # Byte utilities for NDI streams
hidapi = "2.4"  # USB HID for Elgato Stream Deck
image = "0.24"  # Image processing for Stream Deck button icons

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
